[metadata]
name = comictagger_metron_talker
description = A Metron API talker for ComicTagger a cross-platform GUI/CLI app for writing metadata to comic archives
url = https://github.com/comictagger/comictagger-metron-talker
author = ComicTagger team
author_email = comictagger@gmail.com
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities
keywords =
    comictagger
    metron
    metron.cloud
    comics
    comic
    metadata
    tagging
    tagger

[options]
packages = find:
install_requires =
    comictagger>=1.6.0a2
    mokkari
python_requires = >=3.9

[options.packages.find]
exclude = tests; testing

[options.entry_points]
comictagger.talker =
    metron = metron:MetronTalkerExt
