[metadata]
name = comictagger_metron_talker
description = A Metron API talker for ComicTagger a cross-platform GUI/CLI app for writing metadata to comic archives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mizaki/comictagger-metron-talker
author = ComicTagger team
author_email = comictagger@gmail.com
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: MacOS X
    Environment :: Plugins
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities
keywords =
    comictagger
    metron
    metron.cloud
    comics
    comic
    metadata
    tagging
    tagger

[options]
packages = find:
install_requires =
    comictagger@git+https://github.com/comictagger/comictagger@0f07fc3
    mokkari>=2.5.0
python_requires = >=3.9

[options.packages.find]
exclude = tests; testing
src = metron

[options.entry_points]
comictagger.talker =
    metron = metron.metron:MetronTalkerExt

[options.extras_require]
dev =
    black>=22
    flake8==4.*
    flake8-black
    flake8-encodings
    flake8-isort
    invoke
    isort>=5.10
    pytest==7.*
    setuptools>=42
    setuptools-scm[toml]>=3.4
    wheel
